--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div id="header" class="row margintop20">
                     <div class="col-sm-8">  
-                        <p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <p id="description">Browse the map and click and area to view it in more detail.</p>
                     </div>                            
                     <div class="col-sm-2">
                         <a id="reinit" class="btn btn-primary">Return top level</a>
