Update for new description and dropbox links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>IPC Training Gap Map</title>
+        <title>PCI Guinée : écart de formations (établissements)</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" ype="text/css" href="css/bootstrap.min.css"/>
@@ -31,12 +31,13 @@
         <div class="container">
                 <div class="row">
                     <div class="col-sm-8">  
-                        <h2 id="title">IPC Training Gap Map</h2>
+                        <h2 id="title">PCI Guinée : écart de formations (établissements)</h2>
                     </div>                                         
                 </div>
                 <div id="header" class="row margintop20">
                     <div class="col-sm-8">  
-                        <p id="description">Browse the map and click and area to view it in more detail.</p>
+                        <p id="description">Le pourcentage d'établissements guinéens qui n'ont pas reçu une formation de chaque type (PCI Ébola, Triage, ou WASH). Désaggregée par région, préfecture, et sous-préfecture.</p>
+                        <p>Sélectionnez un type de formation dans les onglets, puis sélectionnez une zone géographique pour agrandir.</p>
                     </div>                            
                     <div class="col-sm-2">
                         <a id="reinit" class="btn btn-primary">Return top level</a>
